src/objects/BT_CO_ESHOPPaypalRefundResponse__c.object
<CustomObject>
    <description>eShop Paypal refund response batch file place holder</description>
    <fields>
        <fullName>Batch_Job_Id__c</fullName>
        <label>Batch_Job_Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Run_Date__c</fullName>
        <label>Batch Run Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>actioIndicator__c</fullName>
        <label>actioIndicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>errorMessage__c</fullName>
        <label>errorMessage</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>parentTransactionId__c</fullName>
        <label>parentTransactionId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>refundAmount__c</fullName>
        <label>refundAmount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>statusIndicator__c</fullName>
        <label>statusIndicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subscribername__c</fullName>
        <label>subscribername</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>transactionId__c</fullName>
        <label>transactionId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>BT_CO_ESHOPPaypalRefundResponse</label>
    <nameField>
        <label>BT_CO_ESHOPPaypalRefundResponse Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BT_CO_ESHOPPaypalRefundResponse</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>